src/objects/ACCL__Workflow_State_Transition__c.object
<CustomObject>
    <description>Holds the details of the relationship between workflow and the possible workflow state transitions.</description>
    <fields>
        <fullName>ACCL__Event__c</fullName>
        <description>Event, which triggered the state transition. E.g. &apos;Save&apos;, &apos;Delete&apos;</description>
        <label>Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__From_Initial_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Initial Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__From_Status__c</fullName>
        <description>Reference to the state valid before the state transition.</description>
        <label>From Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                </value>
                <value>
                    <fullName>WorkCompleted</fullName>
                </value>
                <value>
                    <fullName>ForApproval</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>HoldBack</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Send to SAP</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Received By SAP</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__To_Status__c</fullName>
        <description>Reference to the state valid after the state transition.</description>
        <label>To Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                </value>
                <value>
                    <fullName>WorkCompleted</fullName>
                </value>
                <value>
                    <fullName>ForApproval</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>HoldBack</fullName>
                </value>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>final</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>SendFax</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Send to SAP</fullName>
                </value>
                <value>
                    <fullName>Received By SAP</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Routed</fullName>
                </value>
				<value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>ACCL__Workflow__c</referenceTo>
        <relationshipLabel>Workflow State Transitions</relationshipLabel>
        <relationshipName>Workflow_State_Transitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow State Transition</label>
    <nameField>
        <label>Workflow State Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Compare_From_Status_To_Status</fullName>
        <active>true</active>
        <description>The From Status and the To Status can&apos;t be the same.</description>
        <errorConditionFormula>TEXT(ACCL__From_Status__c) = TEXT(ACCL__To_Status__c)</errorConditionFormula>
        <errorMessage>The From Status and the To Status can&apos;t be the same.</errorMessage>
    </validationRules>
</CustomObject>